# LibraryManagementSystem

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TROUBLESHOOTING.md  WORKSPACE.bazel
lib/queue/: BUILD.bazel  queue.c  queue.h
main/: BUILD.bazel  LibraryManagementSystem.c
tools/: tools.lock.json
tools/lint/: BUILD.bazel  linters.bazel
