module(
    name = "library_management_system",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_rules_lint", version = "2.7.2")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "rules_go", version = "0.61.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

register_toolchains("@multitool//toolchains:all")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "15.0.6",
        "darwin-aarch64": "15.0.7",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")